--- a/bootstrapStyle.css
+++ b/bootstrapStyle.css
@@ -4,9 +4,7 @@ border-bottom: 2px solid yellow;
 
 #card-section{
     text-align: center;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 35%;
+
 }
 .card:hover{
 box-shadow: 5px 10px 20px 1px black;
@@ -18,4 +16,7 @@ box-shadow: 5px 10px 20px 1px black;
 }
 .progress{
     margin: 40px 20px 20px 20px;
+}
+#carouselExampleIndicators{
+    width: 300px;
 }
