--- a/TestStyle.css
+++ b/TestStyle.css
@@ -1,3 +1,4 @@
+*{margin: 0;padding: 0;}
 .box{
  position: relative;top: 0px;left: 10px; background-color: orange;text-align: justify; width: 200px;float: right;
  height: 200px; text-decoration: overline;text-indent: 30px;letter-spacing: 1px;line-height: 1.2;word-spacing: 2.7px;
@@ -17,9 +18,6 @@ body{
 }
 h1::first-letter{
         color: white;
-    }
-h1::before{
-    
     }
  img{
        object-fit:cover,contain,scale-down ;
@@ -42,15 +40,14 @@ height: 150px;
 padding: 10px;
 margin: 10%;
 width: 150px;
-transform: perspective(300px);
-transform: perspective(500px) translate(10px, 0, 20px) rotateY(3deg) !important;
+transform:  translate(10px, 0, 20px) rotateY(3deg) !important;
  }
  #a:hover{
      transform: translate(30px,20px,50px);
-     transform: scale(0.8,0.4);
+     transform: scale(0.8,0.4);/*scale(X=width,Y=height)*/
    
  }
-#b{
+#b{display: inline;margin: 10px;
 background-color: #fff;
 padding: 10px;
 margin: 10%;
@@ -65,8 +62,8 @@ transform: rotate(40deg);
 transform: rotateX(50deg);
 transform: rotateY(80deg);
 transform: rotateZ(180deg) !important;
-transform-style:preserve-3d ;
-transform-origin: 20% 40%;
+
+
 width: 200px;
 height: 200px;
 }
@@ -75,17 +72,18 @@ background-color: #fff;
 padding: 10px;
 margin: 10%;
 width: 50px;
+transition-timing-function: cubic-bezier(3,-0.01, 0.28, 2.93);
 animation-name: anim;
-animation-duration: 4s;
+animation-duration: 3s;
 }
-#c:hover{
+#c:hover{/*
     transform: skew(20deg,50deg);/*skewx,skewy*/
-    transform: matrix(1, -0.3, 0, 1, 0, 0) !important;/* matrix(scaleX,skewY,skewX,scaleY,translateX,translateY*/
+   /* transform: matrix(1, -0.3, 0, 1, 0, 0) !important;/* matrix(scaleX,skewY,skewX,scaleY,translateX,translateY*/
  
 }
 @keyframes anim{
-    from{transform: translate(0px);}
-    to{transform: translate(100px);}
+    from{transform: translate(0px);}/*translate(X=width,Y=height,Z)*/
+    to{transform: translate(400px);}
 }
 @keyframes example {
     0%   {background-color:red; left:0px; top:0px;}
@@ -107,4 +105,25 @@ animation-duration: 4s;
        /* animation-fill-mode: both,forwards,backwards;*/
         animation-direction: alternate-reverse;
     }
-   
+ .div1{
+     padding: 20px;
+     width: 100px;
+     height: 100px;
+     background-color: rgb(54, 224, 54);
+    transform: translateX(700px);
+    perspective: 10px;
+   }
+   .div2{
+    padding: 50px;
+    border: 1px solid black;
+    background-color: red;
+    background: blueviolet;
+ transform-style: preserve-3d;
+    transform: rotateX(13deg);
+  
+   }
+   .div2 h1{
+    transform: translateX(-30px);
+    text-shadow: 2px 2px 2px white;
+   }
+ 
