--- a/bootstrapStyle.css
+++ b/bootstrapStyle.css
@@ -4,7 +4,10 @@ border-bottom: 2px solid yellow;
 
 #card-section{
     text-align: center;
-
+float: right;
+position: relative;
+top: -219px;
+left: -355px;
 }
 .card:hover{
 box-shadow: 5px 10px 20px 1px black;
@@ -18,5 +21,11 @@ box-shadow: 5px 10px 20px 1px black;
     margin: 40px 20px 20px 20px;
 }
 #carouselExampleIndicators{
-    width: 300px;
+    position: relative;
+    left: 146px;
+    
+}
+.mt-5, .my-5 {
+    margin-top:1rem!important;
+    max-width: 500px;
 }
