--- a/TestStyle.css
+++ b/TestStyle.css
@@ -11,6 +11,9 @@
     justify-content: center;
   align-items: center;
   border: 10px solid transparent;
+    /*  display:  flex;
+  justify-content: flex-end;
+ justify-content: space-between;*/
   border-image: radial-gradient( rgba(255,0,0,0), rgba(255,0,0,1)) 50;/*linear-gradient(180deg,red,yellow,blue) 30/ 10px ;*/
 }
 body{
