--- a/websiteStyle.css
+++ b/websiteStyle.css
@@ -1,33 +1,34 @@
 *{
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 #container{
-   
+ position: absolute;
+ top: 0;
+  flex-wrap: wrap;
     list-style-type: none;
-   /*  display:  flex;
-  justify-content: flex-end;
- justify-content: space-between;*/
 background-color: #f1f1f1;
 width: 100%;
 height: 70px;
 border-bottom: 2px solid black;
 display: flex;
-flex-direction: row-reverse;
+flex-direction: row;
+justify-content: flex-end;
 }
 #logo{
-  position: relative;
-  right: 1200px;
-
+  position: absolute;
+  right: 1206px;
+z-index: 1;
 }
 #container li a{
     text-decoration: none;
     font-size: 2rem;
     color: #9C837A;
     display: block;
-    padding-right: 50px;
+   text-align: center;
     height: 70px;
- padding: 20px;
+ padding-top: 10px;
  box-sizing: border-box;
  width: 150px;
 
@@ -37,12 +38,57 @@ flex-direction: row-reverse;
   color: #fff;
 
 }
+#sub-menu li{
+ box-sizing: border-box;
+ padding: 0px;
+  font-size: 2rem;
+  text-align: center;
+  border: 1px solid yellowgreen;
+}
 #sub-menu{
+height: 250px;
+width: 150px;
 list-style-type: none;
-
-padding: 20px;
-visibility: hidden;
+background-color: black;
+color: azure;
+opacity: 0;
+transform: scaleY(0);
+transform-origin: top;
+transition: all 0.3s;
 }
 #openSub_menu:hover #sub-menu{
-    visibility: visible;
+    transform: scaleY(1);
+    opacity: 1;
 }
+
+@media(max-width: 600px) {
+body{
+    background-color: brown;
+  }
+  img{
+    width: 50px;
+    height: 30px;
+  }
+  #logo{
+    position: absolute;
+    right: 400px;
+  }
+  #container{
+height: 30px;
+float: right;
+}
+#container li a{
+ font-size: 1rem;
+  height: 30px;
+padding-top: 2px;
+width: 60px;
+}
+#sub-menu li{
+font-size: 1rem;
+  }
+ #sub-menu{
+  height: 130px;
+  width: 65px;
+}
+}
+
