--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 #style ul li a{
 text-decoration: none;  color: #787878;  font-size: 2rem;  font-family:  Georgia, Times, 'Times New Roman', serif;
   }
@@ -52,4 +53,15 @@ animation-duration: 2s;
 }
 #style ul .rotate:hover {
     transform: rotate(360deg) ; 
+}
+.dot{
+  height: 20px;
+  width: 20px;
+  background-color: transparent;
+  border-radius: 50%;
+  transform: translateX(-28px);
+  margin-right: 20px;
+  border: 2px solid white;
+  position: absolute;
+
 }
