--- a/websiteStyle.css
+++ b/websiteStyle.css
@@ -3,6 +3,67 @@
     margin: 0;
     box-sizing: border-box;
 }
+body{
+  background: url('image/background.png');
+  background-size: cover;
+}
+#bubbles img{
+  width: 50px;
+  animation: bubble 7s linear infinite;
+}
+#bubbles{
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  position: absolute;
+  bottom: -70px;
+
+}
+@keyframes bubble{
+  0%{
+      transform: translateY(0);
+      opacity: 0;
+  }
+  50%{
+      opacity: 1;
+  }
+  70%{
+      opacity: 1;
+  }
+  100%{
+      transform: translateY(-80vh);
+      opacity: 0;
+  }
+}
+#bubbles img:nth-child(1){
+animation-delay: 2s;
+width: 30px;
+}
+#bubbles img:nth-child(2){
+animation-delay: 1s;
+width: 50px;
+  }
+#bubbles img:nth-child(3){
+animation-delay: 4s;
+width: 70px;
+}
+#bubbles img:nth-child(4){
+animation-delay: 3s;
+width: 15px;
+}
+#bubbles img:nth-child(5){
+animation-delay: 6s;
+width: 40px;
+}
+#bubbles img:nth-child(6){
+animation-delay: 2.5s;
+width: 45px;
+    }
+#bubbles img:nth-child(7){
+animation-delay: 7s;
+width: 80px;
+}
 #container{
  position: absolute;
  top: 0;
